--- a/app/server/requirements.txt
+++ b/app/server/requirements.txt
@@ -1,5 +1,6 @@
 coreapi==2.3.3
 Django==1.11
+django-cors-headers==2.1.0
 django-debug-toolbar==1.8
 django-extensions==1.9.1
 django-model-utils==3.1.1
