moved npm install into compose-file to prevent caching issues when re-running

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
         build:
             context: ./client
             dockerfile: Dockerfile
-        command: npm run start
+        command: bash -c "npm install; npm run start"
         volumes:
             - ./client:/app
             - /app/node_modules
