--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ language: node_js
 install: true
 
 script:
-    - sed "s/SECRET_KEY=/SECRET_KEY=${DJANGO_SECRET_KEY}" .env > .env.dev
+    - sed "s/SECRET_KEY=/SECRET_KEY=${DJANGO_SECRET_KEY}/g" .env > .env.dev
     - docker-compose -f docker-compose.test.yml up --build
 
 after_success:
