--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -14,6 +14,9 @@ services:
         command: bash -c "npm install; npm test"
         volumes:
             - ./client:/app
+            - node_modules:/app/node_modules
         environment:
             ENV: "prod"
             CI: "true"
+volumes:
+    node_modules:
