--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 
 services:
     server:
+        image: hackforla/spare:server
         build:
             context: ./server
             dockerfile: Dockerfile.web
@@ -24,10 +25,11 @@ services:
         ports:
             - "5432:5432"
     client:
+        image: hackforla/spare:client
         build:
             context: ./client
             dockerfile: Dockerfile
-        command: bash -c "npm install; npm run start"
+        command: bash -c "npm install; npm run start-js"
         volumes:
             - ./client:/app
             - node_modules:/app/node_modules
