--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -2,12 +2,14 @@ version: '3'
 
 services:
     server:
+        image: hackforla/spare:server
         build:
             context: ./server
             dockerfile: Dockerfile.web
         env_file: .env.dev
         command: bash -c "pytest"
     client:
+        image: hackforla/spare:client
         build:
             context: ./client
             dockerfile: Dockerfile
