--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -13,7 +13,7 @@ services:
         build:
             context: ./client
             dockerfile: Dockerfile
-        command: bash -c "npm install; npm test"
+        command: bash -c "npm --loglevel silent install; npm test"
         volumes:
             - ./client:/app
             - node_modules:/app/node_modules
