--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ install: true
 
 script:
     - sed "s/SECRET_KEY=/SECRET_KEY=${DJANGO_SECRET_KEY}/g" .env > .env.dev
+    - docker-compose -f docker-compose.test.yml pull
     - docker-compose -f docker-compose.test.yml up
 
 after_success:
