set up email hook for requests and fulfillments

--- a/.env
+++ b/.env
@@ -4,4 +4,9 @@
 
 DATABASE_URL=postgres://postgres_user@db:5432/postgres_db
 DJANGO_SETTINGS_MODULE=spare.settings.dev
+
+# 'console' prints confirmation emails to stdout
+# 'mailgun' uses the Mailgun backend
+EMAIL_BACKEND=console
+MAILGUN_API_KEY=
 SECRET_KEY=
