added port env variables to make ports dynamic

--- a/.env
+++ b/.env
@@ -10,3 +10,8 @@ DJANGO_SETTINGS_MODULE=spare.settings.dev
 EMAIL_BACKEND=console
 MAILGUN_API_KEY=
 SECRET_KEY=
+
+# Ports variables used by docker-compose.yml
+SERVER_PORT=8000
+DB_PORT=5432
+CLIENT_PORT=3000
