--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,6 +2,7 @@ coreapi==2.3.3
 Django==1.11
 django-cors-headers==2.1.0
 django-debug-toolbar==1.8
+django-enumfields==0.10.1
 django-extensions==1.9.1
 django-filter==1.1.0
 django-model-utils==3.1.1
