--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,6 +8,7 @@ django-extensions==1.9.1
 django-filter==1.1.0
 django-model-utils==3.1.1
 django-grappelli==2.10.1
+django-rq==1.1.0
 djangorestframework==3.7.7
 dj-database-url==0.4.2
 flake8==3.3.0
