Add config for SMS messages

--- a/.env
+++ b/.env
@@ -4,14 +4,21 @@
 
 DATABASE_URL=postgres://postgres_user@db:5432/postgres_db
 DJANGO_SETTINGS_MODULE=spare.settings.dev
-
-# 'console' prints confirmation emails to stdout
-# 'mailgun' uses the Mailgun backend
-EMAIL_BACKEND=console
-MAILGUN_API_KEY=
 SECRET_KEY=
 
 # Ports variables used by docker-compose.yml
 SERVER_PORT=8000
 DB_PORT=5432
 CLIENT_PORT=3000
+
+# 'console' prints confirmation emails to stdout
+# 'mailgun' uses the Mailgun backend
+EMAIL_BACKEND=console
+MAILGUN_API_KEY=
+
+# 'console' prints confirmation texts to stdout
+# 'twilio' uses the Twilio backend
+SMS_BACKEND=console
+TWILIO_ACCOUNT_ID=
+TWILIO_AUTH_TOKEN=
+SMS_FROM_NUMBER=
