Add support for SMS messages

--- a/server/setup.cfg
+++ b/server/setup.cfg
@@ -1,7 +1,9 @@
 [tool:pytest]
-DJANGO_SETTINGS_MODULE = spare.settings.dev
 python_files = tests.py test_*.py *_tests.py
 addopts = --reuse-db
+env =
+    DJANGO_SETTINGS_MODULE=spare.settings.dev
+    SMS_BACKEND=locmem
 
 [isort]
 atomic=true
