Add config option for disabling enqueuing tasks

--- a/.env
+++ b/.env
@@ -22,3 +22,7 @@ SMS_BACKEND=console
 TWILIO_ACCOUNT_ID=
 TWILIO_AUTH_TOKEN=
 SMS_FROM_NUMBER=
+
+# Whether or not to use RQ to enqueue tasks
+# This is useful for debugging or testing tasks
+ENQUEUE_TASKS=false
