Add django-phonenumber-field to backend

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,6 +7,7 @@ django-enumfields==0.10.1
 django-extensions==1.9.1
 django-filter==1.1.0
 django-model-utils==3.1.1
+django-phonenumber-field==2.0.0
 django-grappelli==2.10.1
 django-rq==1.1.0
 djangorestframework==3.7.7
