Use proxy for api

--- a/client/package.json
+++ b/client/package.json
@@ -23,5 +23,6 @@
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://server:8000"
 }
