--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
-    "build": "npm-run-all build-css build-js",
+    "build": "npm-run-all build-css build-js && ./scripts/move-build-files.sh",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
