--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
         command: bash -c "npm install; npm rebuild node-sass; npm run start"
         volumes:
             - ./client:/app
+            - ./server:/app/server
             - node_modules:/app/node_modules
         ports:
             - "${CLIENT_PORT:-3000}:3000"
