--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -10,6 +10,7 @@ django-model-utils==3.1.1
 django-phonenumber-field==2.0.0
 django-grappelli==2.10.1
 django-rq==1.1.0
+django-templated-email==2.2.0
 djangorestframework==3.7.7
 dj-database-url==0.4.2
 flake8==3.3.0
