--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^0.32.1",
     "react-breakpoints": "^3.0.0",
     "react-dom": "^16.3.1",
+    "react-maskedinput": "^4.0.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
