--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "react-maskedinput": "^4.0.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-svg": "^6.0.15"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/sass/ -o src/css/",
