--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -13,6 +13,8 @@ django-rq==1.3.1
 django-templated-email==2.2.0
 djangorestframework==3.7.7
 dj-database-url==0.4.2
+Faker~=2.0.0
+faker-e164~=0.1.0
 flake8==3.3.0
 ipdb==0.10.3
 isort==4.2.5
