More changes to Travis setup

--- a/server/Dockerfile.web
+++ b/server/Dockerfile.web
@@ -5,9 +5,11 @@ FROM python:3.6
 ENV PYTHONUNBUFFERED 1
 
 # Install requirements
-COPY requirements.txt /app/requirements.txt
+COPY requirements /app/requirements/
+RUN pip install -r requirements/prod.txt
+
 WORKDIR /app
-RUN pip install -r requirements.txt
+RUN pip install -r requirements/prod.txt
 
 COPY . /app
 
