--- a/server/setup.cfg
+++ b/server/setup.cfg
@@ -2,7 +2,7 @@
 python_files = tests.py test_*.py *_tests.py
 addopts = --reuse-db
 env =
-    DJANGO_SETTINGS_MODULE=spare.settings.dev
+    DJANGO_SETTINGS_MODULE=spare.settings.ci
     SMS_BACKEND=locmem
 
 [isort]
