--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -18,7 +18,7 @@ faker-e164~=0.1.0
 flake8==3.3.0
 ipdb==0.10.3
 isort==4.2.5
-psycopg2==2.8.3
+psycopg2~=2.8.3
 pytest==3.2.3
 pytest-django==3.1.2
 pytest-env==0.6.2
