--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ before_script:
   - psql -c 'create database postgres_db;' -U postgres
 
 script:
+  - ls
+  - ls server
   - pip install -r server/requirement.txt
   - docker build -f Dockerfile.travis -t hackforla/spare .
   - echo $DJANGO_SETTINGS_MODULE
