--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,7 @@ before_script:
   - psql -c 'create database postgres_db;' -U postgres
 
 script:
-  - ls
-  - ls server
-  - pip install -r server/requirement.txt
+  - pip install -r server/requirements.txt
   - docker build -f Dockerfile.travis -t hackforla/spare .
   - echo $DJANGO_SETTINGS_MODULE
   - ls /var/lib
