--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ script:
   - pip install pipenv
   - pipenv --python 3.6
   - pipenv install -r server/requirements/travis.txt
-  - cd server
-  - sh scripts/run_tests.sh
+  - cd server && sh scripts/run_tests.sh
+  - cd ../client/ && npm install --quiet && npm run build
 
 after_success:
   - echo "Successful!"
