--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,10 @@ language: python
 python:
   - '3.6'
 
+language: node_js
+node_js:
+  - '8'
+
 install: true
 
 env:
@@ -30,7 +34,7 @@ script:
   - pipenv --python 3.6
   - pipenv install -r server/requirements/prod.txt
   - cd server && sh scripts/run_tests.sh
-  - cd ../client/ && npm install --quiet && npm run build
+  - cd ../client/ && npm install && npm run build
 
 after_success:
   - echo "Successful!"
