--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,10 @@ language: python
 python:
   - '3.6'
 
-language: node_js
-node_js:
-  - '8'
-
 install: true
+
+before_install:
+  - nvm install v8
 
 env:
   SECRET_KEY: keepitsecret
