--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ install: true
 
 before_install:
   - nvm install v8
+  - pip install pipenv
+  - pipenv --python 3.6
+  - pipenv install -r server/requirements/prod.txt
 
 env:
   SECRET_KEY: keepitsecret
