--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,6 @@ install: true
 
 before_install:
   - nvm install v8
-  - nvm alias default v8
   - pip install pipenv
   - pipenv --python 3.6
   - pipenv install -r server/requirements/prod.txt
@@ -40,6 +39,7 @@ script:
   - cd ../client/
   - ls
   - npm install
+  - npm rebuild node-sass
   - npm run build-js
   - npm run build-css
 
