--- a/client/package.json
+++ b/client/package.json
@@ -3,20 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.1",
-    "bootstrap": "^3.4.1",
+    "axios": "^0.18.0",
+    "bootstrap": "^3.3.7",
     "moment": "^2.22.2",
-    "node-sass-chokidar": "^1.3.5",
+    "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.2",
-    "postcss-normalize": "^8.0.1",
-    "react": "^16.8.6",
+    "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
     "react-breakpoints": "^3.0.0",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.3.1",
     "react-maskedinput": "^4.0.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "3.0.1",
+    "react-scripts": "1.1.4",
     "react-svg": "^6.0.15"
   },
   "scripts": {
@@ -29,20 +28,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://server:8000",
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "proxy": "http://server:8000"
 }
