--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,62 +1,62 @@
 version: '3'
 
 services:
-    server:
-        image: hackforla/spare:server
-        build:
-            context: ./server
-            dockerfile: Dockerfile.web
-        env_file: .env.dev
-        command: python3 manage.py runserver 0.0.0.0:${SERVER_PORT:-8000}
-        volumes:
-            - ./server:/app
-        ports:
-            - "${SERVER_PORT:-8000}:${SERVER_PORT:-8000}"
-        depends_on:
-            - redis
-            - db
-        stdin_open: true  # These two lines allow us to use pdb via stdin:
-        tty: true         # docker attach <container>
+  server:
+    image: hackforla/spare:server
+    command: /bin/bash
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    env_file: .env.dev
+    volumes:
+      - ./server:/app
+    ports:
+      - "8000:8000"
+    depends_on:
+      - redis
+      - db
+    stdin_open: true # These two lines allow us to use pdb via stdin:
+    tty: true     # docker attach <container>
 
-    db:
-        image: postgres
-        environment:
-            POSTGRES_USER: postgres_user
-            POSTGRES_DB: postgres_db
-        ports:
-            - "${DB_PORT:-5432}:5432"
-    client:
-        image: hackforla/spare:client
-        build:
-            context: ./client
-            dockerfile: Dockerfile
-        command: bash -c "npm install; npm rebuild node-sass; npm run start"
-        volumes:
-            - ./client:/app
-            - ./server:/app/server
-            - node_modules:/app/node_modules
-        ports:
-            - "${CLIENT_PORT:-3000}:3000"
-        depends_on:
-            - server
-    redis:
-        image: redis
-        build:
-            context: ./redis
-            dockerfile: Dockerfile
-    worker:
-        image: hackforla/spare:server
-        build:
-            context: ./server
-            dockerfile: Dockerfile.web
-        env_file: .env.dev
-        command: python3 manage.py rqworker default
-        volumes:
-            - ./server:/app
-        depends_on:
-            - redis
-            - db
-        stdin_open: true  # These two lines allow us to use pdb via stdin:
-        tty: true         # docker attach <container>
+  db:
+    image: postgres
+    environment:
+      POSTGRES_USER: postgres_user
+      POSTGRES_DB: postgres_db
+    ports:
+      - "${DB_PORT:-5432}:5432"
+  client:
+    image: node:8
+    tty: true     # docker attach <container>
+    command: /bin/bash
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    volumes:
+      - ./client:/app
+      - ./server:/app/server
+      - node_modules:/app/node_modules
+    ports:
+      - "${CLIENT_PORT:-3000}:3000"
+    depends_on:
+      - server
+  redis:
+    image: redis
+    build:
+      context: ./redis
+      dockerfile: Dockerfile
+  worker:
+    image: hackforla/spare:server
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    env_file: .env.dev
+    volumes:
+      - ./server:/app
+    depends_on:
+      - redis
+      - db
+    stdin_open: true # These two lines allow us to use pdb via stdin:
+    tty: true     # docker attach <container>
 volumes:
-    node_modules:
+  node_modules:
