Add output to npm build

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ script:
   - pipenv --python 3.6
   - pipenv install -r server/requirements/travis.txt
   - cd server && sh scripts/run_tests.sh
-  - cd ../client/ && npm install --quiet && npm run build
+  - cd ../client/ && npm install --quiet && npm run build --verbose
 
 after_success:
   - echo "Successful!"
