--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,13 @@ notifications:
   on_success: change
   on_failure: always
 
-language: python
+language:
+  - python
+  - node_js
 python:
   - '3.6'
+node_js:
+  - '8.16.1'
 
 install: true
 
