Improvements around organizations

--- a/server/setup.cfg
+++ b/server/setup.cfg
@@ -7,7 +7,7 @@ env =
 
 [isort]
 atomic=true
-combine_as_imports=false
+combine_as_imports=true
 indent=4
 known_first_party=spare
 known_third_party=django
