--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "react-bootstrap": "^0.32.1",
     "react-breakpoints": "^3.0.0",
     "react-dom": "^16.8.6",
+    "react-loadable": "^5.5.0",
     "react-maskedinput": "^4.0.1",
+    "react-modal": "^3.11.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "3.0.1",
