--- a/server/uwsgi.ini
+++ b/server/uwsgi.ini
@@ -3,5 +3,5 @@ http-socket = :$(PORT)
 master = true
 processes = 4
 die-on-term = true
-module = spare.wsgi:application
+module = config.wsgi:application
 memory-report = true
