Update the .env with db password

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 #
 # NOTE: Do not save sensitive information to this file
 
-DATABASE_URL=postgres://postgres_user@db:5432/postgres_db
+DATABASE_URL=postgres://postgres_user:password@db:5432/postgres_db
 DJANGO_SETTINGS_MODULE=spare.settings.dev
 SECRET_KEY=
 
